--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
 include AUTHORS
 include LICENSE
 include README.rst
+recursive-include richcomments/media *
+recursive-include richcomments/templates *
