--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,5 @@ include AUTHORS.rst
 include CHANGELOG.rst
 include LICENSE
 include README.rst
-recursive-include richcomments/media *
+recursive-include richcomments/static *
 recursive-include richcomments/templates *
